       Canon PIXMA MG2270  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2280  (EXPERIMENTAL)(*2)

       Canon MG2400 series (EXPERIMENTAL)(*3)
       Canon PIXMA MG2400  (EXPERIMENTAL)
       Canon PIXMA MG2410  (EXPERIMENTAL)
       Canon PIXMA MG2420  (EXPERIMENTAL)
       Canon PIXMA MG2440  (EXPERIMENTAL)
       Canon PIXMA MG2450  (EXPERIMENTAL)
       Canon PIXMA MG2470  (EXPERIMENTAL)

       Canon MG3100 series (EXPERIMENTAL)(*1)
       Canon PIXMA MG3110  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3120  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3122  (EXPERIMENTAL)(*2)
       Canon PIXUS MG3130  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3140  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3150  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3160  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3170  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3180  (EXPERIMENTAL)(*2)

       Canon MG3200 series (EXPERIMENTAL)
       Canon PIXMA MG3210  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3220  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3222  (EXPERIMENTAL)(*2)
       Canon PIXUS MG3230  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3240  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3250  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3260  (EXPERIMENTAL)(*2)
       Canon PIXMA MG3270  (EXPERIMENTAL)(*2)

       Canon MG4100 series (EXPERIMENTAL)(*1)
       Canon PIXMA MG4110  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4120  (EXPERIMENTAL)(*2)
       Canon PIXUS MG4130  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4140  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4150  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4160  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4170  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4180  (EXPERIMENTAL)(*2)

       Canon MG4200 series (EXPERIMENTAL)
       Canon PIXMA MG4210  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4220  (EXPERIMENTAL)(*2)
       Canon PIXUS MG4230  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4240  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4250  (EXPERIMENTAL)(*2)
       Canon PIXMA MG4260  (EXPERIMENTAL)(*2)